[project]
name = ""
version = ""
description = ""
authors = [
    {name = "parkjbdev", email = "parkjbdev@gmail.com"},
]
dependencies = [
    "bs4",
    "markdownify",
    "requests",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
